// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  class="figure"
  style="width:700px"
>
  <img
    alt="/images/firstcluster.png"
    class="  "
    src="/images/firstcluster.png"
  />
</div>
`;

exports[`renders lightbox correctly when specified as an option 1`] = `
<div
  class="figure lightbox"
  style="width:700px"
>
  <div
    class="lightbox__imageWrapper"
    role="button"
    tabindex="-1"
  >
    <img
      alt="/images/firstcluster.png"
      class="  "
      src="/images/firstcluster.png"
    />
    <div
      class="lightbox__caption"
    >
      click to enlarge
    </div>
  </div>
</div>
`;
